--- a/src/main/resources/templates/member/join.html
+++ b/src/main/resources/templates/member/join.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">    
     <title>롯데ON::롯데 온라인 쇼핑몰</title>
-    <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" th:href="@{/images/favicon.ico}" />
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
-    <link rel="stylesheet" href="../css/common.css"/>
-    <link rel="stylesheet" href="./css/member.css"/>
+    <link rel="stylesheet" th:href="@{/css/common.css}"/>
+    <link rel="stylesheet" th:href="@{/css/member.css}"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://kit.fontawesome.com/20962f3e4b.js" crossorigin="anonymous"></script>
@@ -19,15 +19,15 @@
         <header>
             <div class="top">
                 <div>
-                    <a href="./member/login.html">로그인</a>
-                    <a href="#">회원가입</a>
+                    <a th:href="@{/member/login}">로그인</a>
+                    <a th:href="@{/member/join}">회원가입</a>
                     <a href="#">마이페이지</a>
                     <a href="#"><i class="fa fa-shopping-cart" aria-hidden="true"></i>&nbsp;장바구니</a>
                 </div>
             </div>
             <div class="logo">
                 <div>
-                    <a href="../index.html"><img src="../images/header_logo.png" alt="로고"/></a>
+                    <a th:href="@{/}"><img th:src="@{/images/header_logo.png}" alt="로고"/></a>
                 </div>
             </div>
         </header>
@@ -36,22 +36,22 @@
                 <h1 class="welcome"><strong>롯데ON</strong>에 오신것을 환영합니다.</h1>
                 <div class="type">
                     <div class="normal">
-                        <img src="./images/member_join_tit_normal.gif" alt="구매회원 가입">
+                        <img th:src="@{/images/member_join_tit_normal.gif}" alt="구매회원 가입">
                         <div class="txt">
-                            <img src="./images/member_join_txt_normal.gif" alt="개인 구매회원">
-                            <a href="./member/signup.do?type=normal"><img src="./images/member_join_btn1.gif" alt="회원가입"></a>
+                            <img th:src="@{/images/member_join_txt_normal.gif}" alt="개인 구매회원">
+                            <a href="./member/signup.do?type=normal"><img th:src="@{/images/member_join_btn1.gif}" alt="회원가입"></a>
                         </div>
                     </div>
                     <div class="seller">
-                        <img src="./images/member_join_tit_seller.gif" alt="판매회원 가입">
+                        <img th:src="@{/images/member_join_tit_seller.gif}" alt="판매회원 가입">
                         <div class="txt">
-                            <img src="./images/member_join_txt_seller.gif" alt="개인 구매회원">
-                            <a href="./member/signup.do?type=seller"><img src="./images/member_join_btn2.gif" alt="회원가입"></a>
+                            <img th:src="@{/images/member_join_txt_seller.gif}" alt="개인 구매회원">
+                            <a href="./member/signup.do?type=seller"><img th:src="@{/images/member_join_btn2.gif}" alt="회원가입"></a>
                         </div>
                     </div>
                 </div>
-                <img src="./images/member_join_banner1.jpg" class="banner" alt="신규회원을 위한 기분 좋은 혜택">
-                <img src="./images/member_join_banner2.jpg" class="banner" alt="사업자회원을 위한 기분 좋은 혜택">
+                <img th:src="@{/images/member_join_banner1.jpg}" class="banner" alt="신규회원을 위한 기분 좋은 혜택">
+                <img th:src="@{/images/member_join_banner2.jpg}" class="banner" alt="사업자회원을 위한 기분 좋은 혜택">
             </div>
         </main>        
         <footer>
@@ -62,7 +62,7 @@
               <li><a href="#">전자금융거래약관</a></li>
             </ul>
             <div>
-              <p><img src="../images/footer_logo.png" alt="로고" /></p>
+              <p><img th:src="@{/images/footer_logo.png}" alt="로고" /></p>
               <p>
                 <strong>(주)롯데ON</strong><br />
                 서울특별시 송파구 올림픽로 300 롯데월드타워 26층 (역삼동 강남파이낸스센터)<br />
