--- a/src/main/resources/templates/cs/qna/list.html
+++ b/src/main/resources/templates/cs/qna/list.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.thymeleaf.org">
-  <article>
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{cs/layout.html}">
+  <article layout:fragment="content">
     <nav>
       <h1>회원</h1>
       <h2>회원관련 문의 내용입니다.</h2>
