--- a/src/main/resources/templates/cs/faq/list.html
+++ b/src/main/resources/templates/cs/faq/list.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.thymeleaf.org">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{cs/layout.html}">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
   $(function(){
@@ -23,7 +25,7 @@
     });
   });
 </script>
-  <article>
+  <article layout:fragment="content">
     <nav>
       <h1>회원</h1>
       <h2>가장 자주 묻는 질문입니다.</h2>
