--- a/src/main/resources/templates/cs/faq/view.html
+++ b/src/main/resources/templates/cs/faq/view.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.thymeleaf.org">
-  <article>
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{cs/layout.html}">
+<article layout:fragment="content">
     <nav>
       <h2 class="title"><span>Q.</span>개인회원과 법인회원에 차이가 있나요?</a></h2>
     </nav>
