--- a/src/main/resources/templates/member/registerSeller.html
+++ b/src/main/resources/templates/member/registerSeller.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org"
+	  xmlns:layout="http://www.thymeleaf.org/"
+	  layout:decorate="/member/layout.html">
 <head>
     <meta charset="UTF-8">    
 	<title>롯데ON::롯데 온라인 쇼핑몰</title>
@@ -49,13 +51,13 @@
 							</tr>
 							<tr>
 								<th><span class="essential">*</span>비밀번호</th>
-								<td><input type="password" name="km_pass"
+								<td><input type="password" name="km_pass1"
 									placeholder="비밀번호를 입력" required /> <span class="msgPass">&nbsp;&nbsp;영문,
 										숫자, 특수문자를 조합하여 8~12자까지 설정해 주세요.</span></td>
 							</tr>
 							<tr>
 								<th><span class="essential">*</span>비밀번호확인</th>
-								<td><input type="password" name="km_pass"
+								<td><input type="password" name="km_pass2"
 									placeholder="비밀번호를 확인" required /> <span class="msgPass">&nbsp;&nbsp;비밀번호
 										재입력</span></td>
 							</tr>
@@ -103,22 +105,22 @@
 							</tr>
 							<tr>
 								<th><span class="essential">*</span>EMAIL</th>
-								<td><input type="email" name="kms_email"
+								<td><input type="email" name="km_email"
 									placeholder="이메일 입력" required /></td>
 							</tr>
 							<tr class="addr">
 								<th>회사주소</th>
 								<td>
 									<div>
-										<input type="text" name="kms_zip" id="zip"
+										<input type="text" name="km_zip" id="zip"
 											placeholder="우편번호 입력 클릭" readonly />
 									</div>
 									<div>
-										<input type="text" name="kms_addr1" id="addr1" size="50"
+										<input type="text" name="km_addr1" id="addr1" size="50"
 											placeholder="주소를 검색하세요." readonly />
 									</div>
 									<div>
-										<input type="text" name="kms_addr2" id="addr2" size="50"
+										<input type="text" name="km_addr2" id="addr2" size="50"
 											placeholder="상세주소를 입력하세요." />
 									</div>
 								</td>
@@ -130,12 +132,12 @@
 							<caption>담당자 정보입력</caption>
 							<tr>
 								<th><span class="essential">*</span>이름</th>
-								<td><input type="text" name="km_name" placeholder="이름을 입력"
+								<td><input type="text" name="kms_manager" placeholder="이름을 입력"
 									required /></td>
 							</tr>
 							<tr>
 								<th><span class="essential">*</span>휴대폰</th>
-								<td><input type="text" name="km_hp" maxlength="13"
+								<td><input type="text" name="kms_managerHp" maxlength="13"
 									placeholder="휴대폰번호 입력" required /> <span class="msgHp">&nbsp;&nbsp;-
 										포함 13자리를 입력하세요.</span></td>
 							</tr>
