--- a/src/main/resources/templates/member/register.html
+++ b/src/main/resources/templates/member/register.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org"
+	  xmlns:layout="http://www.thymeleaf.org/"
+	  layout:decorate="/member/layout.html">
 <head>
     <meta charset="UTF-8">    
     <title>롯데ON::롯데 온라인 쇼핑몰</title>
@@ -47,13 +49,13 @@
 							</tr>
 							<tr>
 								<th><span class="essential">*</span>비밀번호</th>
-								<td><input type="password" name="km_pass" placeholder="비밀번호를 입력"
+								<td><input type="password" name="km_pass1" placeholder="비밀번호를 입력"
 									required /> <span class="msgPass">영문, 숫자, 특수문자를 조합하여
 										8~12자까지 설정해 주세요.</span></td>
 							</tr>
 							<tr>
 								<th><span class="essential">*</span>비밀번호확인</th>
-								<td><input type="password" name="km_pass" placeholder="비밀번호를 확인"
+								<td><input type="password" name="km_pass2" placeholder="비밀번호를 확인"
 									required /> <span class="msgPass">비밀번호 재입력</span></td>
 							</tr>
 						</table>
@@ -70,7 +72,7 @@
 								<th><span class="essential">*</span>성별</th>
 								<td><label><input type="radio" name="km_gender"
 										value="1" checked>&nbsp;남</label> <label><input
-										type="radio" name="gender" value="2">&nbsp;여</label></td>
+										type="radio" name="km_gender" value="2">&nbsp;여</label></td>
 							</tr>
 							<tr>
 								<th><span class="essential">*</span>EMAIL</th>
