--- a/src/main/resources/templates/cs/qna/write.html
+++ b/src/main/resources/templates/cs/qna/write.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{cs/layout.html}">
-<article layout:fragment="content">
+      layout:decorate="~{cs/fragments/layout.html}">
+  <article layout:fragment="content">
     <form action="#">
       <table>
         <tr>
