--- a/src/main/resources/templates/cs/faq/list.html
+++ b/src/main/resources/templates/cs/faq/list.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{cs/layout.html}">
+      layout:decorate="~{cs/fragments/layout.html}">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
   $(function(){
@@ -26,9 +26,8 @@
   });
 </script>
   <article layout:fragment="content">
-    <nav>
-      <h1>회원</h1>
-      <h2>가장 자주 묻는 질문입니다.</h2>
+    <nav th:replace="~{cs/fragments/nav :: nav}">
+      <!-- nav 들어올 영역 -->
     </nav>
 
     <div>
