--- a/src/main/resources/templates/cs/qna/list.html
+++ b/src/main/resources/templates/cs/qna/list.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{cs/layout.html}">
+      layout:decorate="~{cs/fragments/layout.html}">
   <article layout:fragment="content">
-    <nav>
-      <h1>회원</h1>
-      <h2>회원관련 문의 내용입니다.</h2>
+    <nav th:replace="~{cs/fragments/nav :: nav}">
+      <!-- nav 들어올 영역 -->
     </nav>
     <table>
       <tr>
