--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="UTF-8" />
     <title>롯데ON::롯데 온라인 쇼핑몰</title>
-    <link rel="shortcut icon" type="image/x-icon" href="../../../../../../../Downloads/LotteON/images/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" th:href="@{/images/favicon.ico}" />
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css"/>
-    <link rel="stylesheet" href="../../../../../../../Downloads/LotteON/css/common.css" />
+    <link rel="stylesheet" th:href="@{/css/common.css}" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://kit.fontawesome.com/20962f3e4b.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
-    <script src="../../../../../../../Downloads/LotteON/js/index.js"></script>
+    <script th:src="@{/js/index.js}"></script>
     <style>
       #bannerTop {
         display: none;
@@ -61,7 +61,7 @@
   <body>
     <div id="bannerTop" class="on" style="background: #e4dfdf;">
       <article>
-        <a href="#"><img src="../../../../../../../Downloads/LotteON/images/topBanner1.png"/></a>
+        <a href="#"><img th:src="@{/images/topBanner1.png}"/></a>
         <button class="btnClose">close</button>
       </article>
     </div>
@@ -80,7 +80,7 @@
         </div>
         <div class="logo">
           <div>
-            <a href="#"><img src="../../../../../../../Downloads/LotteON/images/header_logo.png" alt="로고" /></a>
+            <a href="#"><img th:src="@{/images/header_logo.png}" alt="로고" /></a>
             <form action="#">
               <input type="text" name="search" />
               <button><i class="fa fa-search"></i></button>
@@ -861,7 +861,7 @@
           <li><a href="#">전자금융거래약관</a></li>
         </ul>
         <div>
-          <p><img src="../../../../../../../Downloads/LotteON/images/footer_logo.png" alt="로고" /></p>
+          <p><img th:src="@{/images/footer_logo.png}" alt="로고" /></p>
           <p>
             <strong>(주)롯데ON</strong><br />
             서울특별시 송파구 올림픽로 300 롯데월드타워 26층 (역삼동 강남파이낸스센터)<br />
