--- a/src/main/resources/static/css/member.css
+++ b/src/main/resources/static/css/member.css
@@ -286,7 +286,16 @@ header {
   border-radius: 2px;
   cursor: pointer;
 }
-
+#member > .signup .allCheck {
+  float: right;
+  width: 100%;
+  height: auto;
+  border-top: 1px solid #d9d9d9;
+  margin: 20px 0;
+}
+#member > .signup .allCheck label {
+  margin-top: 10px;
+}
 /* member > .register */
 #member > .register {
   width: 900px;
