--- a/src/main/resources/templates/member/layout.html
+++ b/src/main/resources/templates/member/layout.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.thymeleaf.org/"
-      layout:decorate="/member/layout.html">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>롯데ON::롯데 온라인 쇼핑몰</title>
@@ -34,7 +32,7 @@
         </div>
     </header>
     <main id="member">
-        <div layout:fragment="content">
+        <div>
             <!-- 메인 기능 -->
         </div>
     </main>
