--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.thymeleaf.org/"
-      layout:decorate="/member/layout.html">
+      xmlns:layout="http://www.thymeleaf.org/">
 <head>
     <meta charset="UTF-8">    
     <title>롯데ON::롯데 온라인 쇼핑몰</title>
@@ -56,7 +55,7 @@
                         <label><input type="checkbox" name="auto"/>자동 로그인</label>
 						<a href="#">아이디찾기</a>
 						<a href="#">비밀번호찾기</a>
-						<a href="#">회원가입</a>
+						<a th:href="@{/member/join}">회원가입</a>
 					</span>
 
                     <a href="#" class="banner"><img th:src="@{/images/member_login_banner.jpg}" alt="1만원 할인 쿠폰 받기"></a>
