--- a/src/main/resources/templates/member/signup.html
+++ b/src/main/resources/templates/member/signup.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.thymeleaf.org/"
-      layout:decorate="/member/layout.html">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">    
     <title>롯데ON::롯데 온라인 쇼핑몰</title>
@@ -16,6 +14,54 @@
     <script src="https://kit.fontawesome.com/20962f3e4b.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
 </head>
+<script>
+    window.onload = function(){
+
+        const agree1 = document.getElementsByName('agree1')[0];
+        const agree2 = document.getElementsByName('agree2')[0];
+        const agree3 = document.getElementsByName('agree3')[0];
+        const agree4 = document.getElementsByName('agree4')[0];
+
+        const typeInput = document.getElementsByName('type')[0];
+        const type = typeInput.value;
+
+        // 모두 동의 체크
+        $('input[name=all]').change(function(){
+            const isChecked = $(this).is(':checked');
+
+            if(isChecked){
+                $('input[type=checkbox]').prop('checked',true);
+            }else{
+                $('input[type=checkbox]').prop('checked',false);
+            }
+        });
+
+        // 약관 동의
+        const agree = document.querySelector('.agree');
+        agree.addEventListener('click', function(e){
+            e.preventDefault();
+
+            if(!agree1.checked){
+                alert('이용약관에 동의하셔야 합니다.');
+                return;
+            }else if(!agree2.checked){
+                alert('전자금융거래 이용약관에 동의하셔야 합니다.');
+                return;
+            }else if(!agree3.checked){
+                alert('개인정보 수집동의에 동의하셔야 합니다.');
+                return;
+            }else{
+
+                // 일반 회원, 판매 회원 구분
+                if(type == 'normal'){
+                    location.href ="/member/register";
+                }else{
+                    location.href ="/member/registerSeller";
+                }
+            }
+        })
+    }
+</script>
 <body>
     <div id="wrapper">
         <header>
@@ -38,6 +84,7 @@
 				<nav>
 					<h1>약관동의</h1>
 				</nav>
+                <input type="hidden" name="type" th:value="${type}">
 				<section>
 					<h3><span class="essential">(필수)</span>케이마켓 이용약관</h3>
 					<textarea class="terms" readonly></textarea>
@@ -57,7 +104,9 @@
 					<textarea class="location" readonly></textarea>
 					<label><input type="checkbox" name="agree4" />동의합니다.</label>
 				</section>
-
+                <div class="allCheck">
+                    <label><input type="checkbox" name="all"/>모두 동의합니다.</label>
+                </div>
 				<div>
 					<input type="button" class="agree" value="동의하기" />
 				</div>
