--- a/src/main/resources/templates/cs/qna/list.html
+++ b/src/main/resources/templates/cs/qna/list.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{cs/fragments/layout.html}">
+      layout:decorate="~{/cs/fragments/layout :: content}">
   <article layout:fragment="content">
-    <nav th:replace="~{cs/fragments/nav :: nav}">
+    <nav th:replace="~{/cs/fragments/nav :: nav}">
       <!-- nav 들어올 영역 -->
     </nav>
     <table>
