--- a/src/main/resources/templates/admin/product/register.html
+++ b/src/main/resources/templates/admin/product/register.html
@@ -63,10 +63,10 @@
                     <li>
                         <a th:href="@{/admin/index}"><i class="fa fa-credit-card" aria-hidden="true"></i>주문관리</a>
                         <ol>
-                            <li><a th:href="@{/admin/order.list}">주문현황</a></li>
+                            <li><a th:href="@{/admin/order/list}">주문현황</a></li>
                             <li><a th:href="@{/admin/index}">매출현황</a></li>
                             <li><a th:href="@{/admin/index}">결제관리</a></li>
-                            <li><a th:href="@{admin/index}">배송관리</a></li>
+                            <li><a th:href="@{/admin/index}">배송관리</a></li>
                         </ol>
                     </li>
                     <li>
