--- a/src/main/resources/templates/product/complete.html
+++ b/src/main/resources/templates/product/complete.html
@@ -2,11 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{product/layout.html}">
-<article layout:fragment="content">
+<section layout:fragment="content" class="complete">
 
         <!-- 결제완료 페이지 시작 -->
-        <section class="complete">
-
             <!-- 제목, 페이지 네비게이션 -->
             <nav>
                 <h1>주문완료</h1>
@@ -166,5 +164,4 @@
 
         </section>
         <!-- 결제완료 페이지 끝 -->
-    </article>
 </html>
