--- a/src/main/resources/templates/product/view.html
+++ b/src/main/resources/templates/product/view.html
@@ -2,10 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{product/layout.html}">
-<article layout:fragment="content">
+<section layout:fragment="content" class="view">
         <!-- 상품 상세페이지 시작 -->
-        <section class="view">
-
             <!-- 제목, 페이지 네비게이션 -->
             <nav>
                 <h1>상품보기</h1>
@@ -259,7 +257,6 @@
 
             </article>
 
-        </section>
         <!-- 상품 상세페이지 끝 -->
-    </article>
+    </section>
 </html>
