--- a/src/main/resources/templates/product/layout.html
+++ b/src/main/resources/templates/product/layout.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="UTF-8">
         <title>롯데ON::롯데 온라인 쇼핑몰</title>
-        <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico" />
+        <link rel="shortcut icon" type="image/x-icon" th:href="@{/images/favicon.ico}" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
         <script src="https://kit.fontawesome.com/20962f3e4b.js" crossorigin="anonymous"></script>
@@ -13,8 +13,8 @@
         <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
-        <link rel="stylesheet" href="../css/common.css"/>
-        <link rel="stylesheet" href="./css/product.css"/>
+        <link rel="stylesheet" th:href="@{/css/common.css}"/>
+        <link rel="stylesheet" th:href="@{/css/product.css}"/>
         <style>
 
 
@@ -103,14 +103,14 @@
                 </li>
             </ul>
         </aside>
-        <article layout:fragment="content">
+        <section layout:fragment="content">
 
             <!--
               컨텐츠가 들어와야 할 위치
             -->
 
 
-        </article>
+        </section>
     </main>
         <footer>
             <ul>
