--- a/src/main/resources/templates/product/list.html
+++ b/src/main/resources/templates/product/list.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{product/layout.html}">
-    <article layout:fragment="content">
-        <section class="list">
+      layout:decorate="~{/product/layout.html}">
+    <section layout:fragment="content" class="list">
             <!-- 제목, 페이지 네비게이션 -->
             <nav>
                 <h1>상품목록</h1>
@@ -22,7 +21,7 @@
 
             <!-- 상품목록 -->
             <table border="0">
-                <tr th:each="product:${products.getDtoList}">
+                <tr th:each="product:${products.dtoList}">
                     <td><a href="#" class="thumb"><img src="https://via.placeholder.com/120x120" alt="상품이미지"/></a></td>
                     <td>
                         <h3 class="name">[[${product.prodName}]]</h3>
@@ -30,12 +29,13 @@
                     </td>
                     <td>
                         <ul>
-                            <li><ins class="dis-price">27,000</ins></li>
+                            <li><ins class="dis-price">[[${product.price - ((product.price/100)*product.discount)}]]</ins></li>
                             <li>
-                                <del class="org-price">30,000</del>
-                                <span class="discount">10%</span>
+                                <del class="org-price" th:if="${product.discount ne 0}">[[${product.price}]]</del>
+                                <span class="discount" th:if="${product.discount ne 0}">[[${product.discount}]]%</span>
                             </li>
-                            <li><span class="free-delivery">무료배송</span></li>
+                            <li><span class="free-delivery" th:if="${product.delivery eq 0}">무료배송</span></li>
+                            <li><span class="free-delivery" th:if="${product.delivery ne 0}">[[${product.delivery}]]원</span></li>
                         </ul>
                     </td>
                     <td>
@@ -66,5 +66,4 @@
                 </span>
             </div>
         </section>
-    </article>
 </html>
