--- a/src/main/resources/templates/product/search.html
+++ b/src/main/resources/templates/product/search.html
@@ -2,11 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{product/layout.html}">
-<article layout:fragment="content">
+<section layout:fragment="content" class="search">
         
         <!-- 상품검색 화면 시작 -->
-        <section class="search">
-
           <!-- 제목, 페이지 네비게이션 -->
           <nav>
             <h1>상품 검색 결과</h1>
@@ -113,5 +111,4 @@
           
         </section>
         <!-- 상품검색 화면 끝 -->
-    </article>
 </html>
