--- a/src/main/resources/templates/admin/product/register.html
+++ b/src/main/resources/templates/admin/product/register.html
@@ -7,16 +7,16 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://kit.fontawesome.com/20962f3e4b.js" crossorigin="anonymous"></script>    
-    <script src="../js/gnb.js"></script>
+    <script th:src="@{/js/gnb.js}"></script>
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <link rel="stylesheet" href="../css/admin.css">
+    <link rel="stylesheet" th:href="@{/css/admin.css}">
 </head>
 <body>
     <div id="admin-wrapper">
         <header>
             <div>
-                <a th:href="@{/index}" class="logo"><img src="../images/admin_logo.png" alt="admin_logo"/></a>
+                <a th:href="@{/index}" class="logo"><img src="/images/admin_logo.png" alt="admin_logo"/></a>
                 <p>
                     <span>홍길동님 반갑습니다.</span>
                     <a th:href="@{/}">HOME |</a>
@@ -33,22 +33,22 @@
                         <a th:href="@{/admin/config/info}"><i class="fa fa-cogs" aria-hidden="true"></i>환경설정</a>
                         <ol>
                             <li><a th:href="@{/admin/config/info}">기본환경설정</a></li>
-                            <li><a th:href="@{/admin/config/info}">배너관리</a></li>
+                            <li><a th:href="@{/admin/config/banner}">배너관리</a></li>
                         </ol>
                     </li>
                     <li>
-                        <a th:href="@{/admin/config/info}"><i class="fas fa-store" aria-hidden="true"></i>상점관리</a>
+                        <a th:href="@{/admin/index}"><i class="fas fa-store" aria-hidden="true"></i>상점관리</a>
                         <ol>
-                            <li><a th:href="@{/admin/config/info}">판매자현황</a></li>
+                            <li><a th:href="@{/admin/index}">판매자현황</a></li>
                             <li><a th:href="@{/admin/product/list}">재고관리</a></li>
                         </ol>
                     </li>
                     <li>
-                        <a th:href="@{/admin/member}"><i class="fa fa-users" aria-hidden="true"></i>회원관리</a>
+                        <a th:href="@{/admin/index}"><i class="fa fa-users" aria-hidden="true"></i>회원관리</a>
                         <ol>
-                            <li><a th:href="@{/admin/member/list}">회원현황</a></li>
-                            <li><a th:href="@{/admin/memeber/point}">포인트관리</a></li>
-                            <li><a th:href="@{/admin/memebr}">비회원관리</a></li>
+                            <li><a th:href="@{/admin/index}">회원현황</a></li>
+                            <li><a th:href="@{/admin/index}">포인트관리</a></li>
+                            <li><a th:href="@{/admin/index}">비회원관리</a></li>
                             <li><a th:href="@{/admin/index}">접속자집계</a></li>
                         </ol>
                     </li>
@@ -63,14 +63,14 @@
                     <li>
                         <a th:href="@{/admin/index}"><i class="fa fa-credit-card" aria-hidden="true"></i>주문관리</a>
                         <ol>
-                            <li><a th:href="@{/admin/order/list}">주문현황</a></li>
+                            <li><a th:href="@{/admin/index}">주문현황</a></li>
                             <li><a th:href="@{/admin/index}">매출현황</a></li>
                             <li><a th:href="@{/admin/index}">결제관리</a></li>
                             <li><a th:href="@{/admin/index}">배송관리</a></li>
                         </ol>
                     </li>
                     <li>
-                        <a th:href="@{/admin/article}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>게시판관리</a>
+                        <a th:href="@{/admin/index}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>게시판관리</a>
                         <ol>
                             <li><a th:href="@{/admin/index}">게시판현황</a></li>
                             <li><a th:href="@{/admin/index}">고객문의</a></li>
