--- a/src/main/resources/templates/cs/notice/view.html
+++ b/src/main/resources/templates/cs/notice/view.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{cs/fragments/layout.html}">
+      layout:decorate="~{/cs/fragments/layout.html}">
   <article layout:fragment="content">
     <nav>
       <h2 class="title">[안내] 해외결제 사칭 문자 주의</h2>
