--- a/src/main/resources/templates/cs/qna/view.html
+++ b/src/main/resources/templates/cs/qna/view.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{cs/fragments/layout.html}">
+      layout:decorate="~{/cs/fragments/layout.html}">
   <article layout:fragment="content">
     <nav>
       <h2 class="title">[가입] 가입 문의내용</h2>
