--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -874,6 +874,7 @@
             <strong>고객센터</strong><br />
             Tel : 1899-7000(유료) (평일 09:00~18:00)<br />
             Fax : 051-123-4567 | E-mail : lotteon@lotte.net<br />
+            App Version:LotteOn-0.0.3-SNAPSHOT<br/>
           </p>
         </div>
       </footer>
