--- a/src/main/resources/templates/member/layout.html
+++ b/src/main/resources/templates/member/layout.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>롯데ON::롯데 온라인 쇼핑몰</title>
@@ -32,7 +34,7 @@
         </div>
     </header>
     <main id="member">
-        <div>
+        <div layout:fragment="memberMain">
             <!-- 메인 기능 -->
         </div>
     </main>
