--- a/src/main/resources/templates/cs/faq/list.html
+++ b/src/main/resources/templates/cs/faq/list.html
@@ -29,51 +29,20 @@
     <nav th:replace="~{/cs/fragments/nav :: nav}">
       <!-- nav 들어올 영역 -->
     </nav>
-
-    <div>
-      <h3>가입</h3>
+    <div th:each="board, num:${boardList}">
+      <h3>
+        [[${board.get(0).cate2.cate2_name}]]
+      </h3>
       <ul>
-        <li><a href="./view.html"><span>Q.</span>개인회원과 법인회원에 차이가 있나요?</a></li>
-        <li><a href="#"><span>Q.</span>개인회원과 법인회원에 차이가 있나요?</a></li>
-        <li><a href="#"><span>Q.</span>개인회원과 법인회원에 차이가 있나요?</a></li>
-        <li><a href="#"><span>Q.</span>개인회원과 법인회원에 차이가 있나요?</a></li>
-        <li><a href="#"><span>Q.</span>개인회원과 법인회원에 차이가 있나요?</a></li>
-        <li class="more"><a href="#">더보기</a></li>
+        <li th:each="brd:${board}">
+          <a th:href="@{/cs/qna/view(cate1=${brd.cate1.cate1}, no=${brd.no})}">
+            <span>Q.</span>[[${brd.title}]]
+          </a>
+        </li>
+        <li class="more">
+          <a href="#">더보기</a>
+        </li>
       </ul>
     </div>
-    <div>
-      <h3>탈퇴</h3>
-      <ul>
-        <li><a href="#"><span>Q.</span>회원탈퇴 후 재가입이 가능한가요?</a></li>
-        <li><a href="#"><span>Q.</span>회원탈퇴 후 재가입이 가능한가요?</a></li>
-        <li><a href="#"><span>Q.</span>회원탈퇴 후 재가입이 가능한가요?</a></li>
-        <li><a href="#"><span>Q.</span>회원탈퇴 후 재가입이 가능한가요?</a></li>
-        <li><a href="#"><span>Q.</span>회원탈퇴 후 재가입이 가능한가요?</a></li>
-        <li class="more"><a href="#">더보기</a></li>
-      </ul>
-    </div>
-    <div>
-      <h3>회원정보</h3>
-      <ul>
-        <li><a href="#"><span>Q.</span>회원정보를 수정하고 싶어요.</a></li>
-        <li><a href="#"><span>Q.</span>회원정보를 수정하고 싶어요.</a></li>
-        <li><a href="#"><span>Q.</span>회원정보를 수정하고 싶어요.</a></li>
-        <li><a href="#"><span>Q.</span>회원정보를 수정하고 싶어요.</a></li>
-        <li><a href="#"><span>Q.</span>회원정보를 수정하고 싶어요.</a></li>
-        <li class="more"><a href="#">더보기</a></li>
-      </ul>
-    </div>
-    <div>
-      <h3>로그인</h3>
-      <ul>
-        <li><a href="#"><span>Q.</span>로그인에 문제가 있어요.</a></li>
-        <li><a href="#"><span>Q.</span>로그인에 문제가 있어요.</a></li>
-        <li><a href="#"><span>Q.</span>로그인에 문제가 있어요.</a></li>
-        <li><a href="#"><span>Q.</span>로그인에 문제가 있어요.</a></li>
-        <li><a href="#"><span>Q.</span>로그인에 문제가 있어요.</a></li>
-        <li class="more"><a href="#">더보기</a></li>
-      </ul>
-    </div>
-
   </article>
 </html>
