--- a/src/main/resources/templates/cs/faq/view.html
+++ b/src/main/resources/templates/cs/faq/view.html
@@ -4,12 +4,12 @@
       layout:decorate="~{/cs/fragments/layout.html}">
   <article layout:fragment="content">
     <nav>
-      <h2 class="title"><span>Q.</span>개인회원과 법인회원에 차이가 있나요?</a></h2>
+      <h2 class="title"><span>Q.</span>[[${view.title}]]</a></h2>
     </nav>
 
     <div class="content">
       <p>
-        개인회원에서 법인회원(사업자 회원)으로 전환은 불가하므로 법인회원(사업자 회원) 전환은 신규 가입으로 진행을 해야 합니다.
+        [[${view.content}]]
       </p>
       <p>
         ※ 피싱 관련 피해신고<br /><br />
@@ -20,6 +20,6 @@
         감사합니다.<br />
       </p>
     </div>
-    <a href="./list.html" class="btnList">목록보기</a>
+    <a th:href="@{/cs/faq/list}" class="btnList">목록보기</a>
   </article>
 </html>
