--- a/src/main/resources/templates/cs/notice/list.html
+++ b/src/main/resources/templates/cs/notice/list.html
@@ -8,55 +8,30 @@
     </nav>
 
     <table>
-      <tr>
-        <td><a href="./view.html">[안내] 해외결제 사칭 문자 주의</a></td>
-        <td>2022.11.21</td>
-      </tr>
-      <tr>
-        <td><a href="./view.html">[발표]『G.Live X SK스토아(하남쭈꾸미)』 이벤트 당첨자</a></td>
-        <td>2022.11.21</td>
-      </tr>
-      <tr>
-        <td><a href="#">[안내] 로젠택배 반품/교환 수거지시 지연 안내</a></td>
-        <td>2022.11.21</td>
-      </tr>
-      <tr>
-        <td><a href="#">[안내] 해외직구셀러 특별약관 개정</a></td>
-        <td>2022.11.21</td>
-      </tr>
-      <tr>
-        <td><a href="#">[안내] 위치정보이용 약관 개정 공지</a></td>
-        <td>2022.11.21</td>
-      </tr>
-      <tr>
-        <td><a href="#">[발표]『써모스 상품 구매』 이벤트 당첨자</a></td>
-        <td>2022.11.21</td>
-      </tr>
-      <tr>
-        <td><a href="#">한국소비자원, '22년 OECD 글로벌 제품안전 캠페인</a></td>
-        <td>2022.11.21</td>
-      </tr>
-      <tr>
-        <td><a href="#">[점검] G마켓 사이트 이용 일시 중단</a></td>
-        <td>2022.11.21</td>
-      </tr>
-      <tr>
-        <td><a href="#">[안내] 구매회원 이용약관 개정</a></td>
-        <td>2022.11.21</td>
-      </tr>
-      <tr>
-        <td><a href="#">[안내] 씨티은행 시스템 점검에 따른 계좌, 체크카드결제 서비스 일시 중단</a></td>
-        <td>2022.11.21</td>
+      <tr th:each="board:${boardList}">
+        <td>
+          <a th:href="@{/cs/notice/view(cate1=${board.cate1.cate1}, no=${board.no})}">
+            [[${board.title}]]
+          </a>
+        </td>
+        <td>[[${board.yyyyMMdd}]]</td>
       </tr>
     </table>
 
     <div class="page">
-      <a href="#" class="prev">이전</a>
-      <a href="#" class="num on">1</a>
-      <a href="#" class="num">2</a>
-      <a href="#" class="num">3</a>
-      <a href="#" class="next">다음</a>
-    </div>
+      <a th:href="@{/cs/qna/list(cate=free, pg=${pageResponseDTO.start-1})}"
+         class="prev" th:if="${pageResponseDTO.prev}">
+        이전
+      </a>
 
+      <th:block th:each="num:${#numbers.sequence(pageResponseDTO.start, pageResponseDTO.end)}">
+        <a th:href="@{/cs/qna/list(cate=free, pg=${num})}" th:classappend="${pageResponseDTO.pg eq num ? 'num on' : 'num'}">[[${num}]]</a>
+      </th:block>
+
+      <a th:href="@{/cs/qna/list(cate=free, pg=${pageResponseDTO.end+1})}"
+         class="next" th:if="${pageResponseDTO.next}">
+        다음
+      </a>
+    </div>
   </article>
 </html>
