--- a/src/main/resources/templates/cs/notice/view.html
+++ b/src/main/resources/templates/cs/notice/view.html
@@ -4,19 +4,13 @@
       layout:decorate="~{/cs/fragments/layout.html}">
   <article layout:fragment="content">
     <nav>
-      <h2 class="title">[안내] 해외결제 사칭 문자 주의</h2>
-      <span class="date">2022.11.20</span>
+      <h2 class="title">[[${view.cate2.wrapping}]] [[${view.title}]]</h2>
+      <span class="date">[[${view.yyyyMMdd}]]</span>
     </nav>
 
     <div class="content">
       <p>
-        안녕하세요. G마켓입니다.<br />
-        G마켓 해외직구를 사칭하는 피싱 문자가 최근 다시 신고되고 있어
-        주의 안내드립니다.<br />
-        아래와 같이 G마켓 해외직구 승인결제 피싱 문자 또는 발신번호
-        006, 002 등으로 시작하는 피싱 문자를 수신하신 고객님께서는
-        통화 또는 문자 내 기재된 번호/링크 등을 클릭하지 않도록
-        주의하여 주시기 바랍니다.<br /><br />
+        [[${view.content}]]
       </p>
       <p>
         ※ 피싱 관련 피해신고<br /><br />
@@ -27,6 +21,6 @@
         감사합니다.<br />
       </p>
     </div>
-    <a href="./list.html" class="btnList">목록보기</a>
+    <a th:href="@{/cs/notice/list}" class="btnList">목록보기</a>
   </article>
 </html>
