--- a/src/main/resources/templates/cs/qna/list.html
+++ b/src/main/resources/templates/cs/qna/list.html
@@ -7,67 +7,34 @@
       <!-- nav 들어올 영역 -->
     </nav>
     <table>
-      <tr>
-        <td><a href="./view.html">[가입] 가입 문의내용</a></td>
-        <td>chh**</td>
-        <td>2022.11.21</td>
-      </tr>
-      <tr>
-        <td><a href="./view.html">[탈퇴] 탈퇴 문의내용</a></td>
-        <td>chh**</td>
-        <td>2022.11.21</td>
-      </tr>
-      <tr>
-        <td><a href="#">[회원정보] 회원정보 문의내용</a></td>
-        <td>chh**</td>
-        <td>2022.11.21</td>
-      </tr>
-      <tr>
-        <td><a href="#">[로그인] 회원정보 문의내용</a></td>
-        <td>chh**</td>
-        <td>2022.11.21</td>
-      </tr>
-      <tr>
-        <td><a href="#">[로그인] 회원정보 문의내용</a></td>
-        <td>chh**</td>
-        <td>2022.11.21</td>
-      </tr>
-      <tr>
-        <td><a href="#">[로그인] 회원정보 문의내용</a></td>
-        <td>chh**</td>
-        <td>2022.11.21</td>
-      </tr>
-      <tr>
-        <td><a href="#">[회원정보] 회원정보 문의내용</a></td>
-        <td>chh**</td>
-        <td>2022.11.21</td>
-      </tr>
-      <tr>
-        <td><a href="#">[회원정보] 회원정보 문의내용</a></td>
-        <td>chh**</td>
-        <td>2022.11.21</td>
-      </tr>
-      <tr>
-        <td><a href="#">[탈퇴] 회원정보 문의내용</a></td>
-        <td>chh**</td>
-        <td>2022.11.21</td>
-      </tr>
-      <tr>
-        <td><a href="#">[탈퇴] 회원정보 문의내용</a></td>
-        <td>chh**</td>
-        <td>2022.11.21</td>
+      <tr th:each="board:${boardList}">
+        <td>
+          <a th:href="@{cs/qna/view(cate1=${board.cate1.cate1}, no=${board.no})}">
+            [[${board.cate2.wrapping}]] [[${board.title}]]
+          </a>
+        </td>
+        <td>[[${board.uid.uidMasking}]]</td>
+        <td>[[${board.yyyyMMdd}]]</td>
       </tr>
     </table>
 
     <div class="page">
-      <a href="#" class="prev">이전</a>
-      <a href="#" class="num on">1</a>
-      <a href="#" class="num">2</a>
-      <a href="#" class="num">3</a>
-      <a href="#" class="next">다음</a>
+      <a th:href="@{/cs/qna/list(cate=free, pg=${pageResponseDTO.start-1})}"
+         class="prev" th:if="${pageResponseDTO.prev}">
+        이전
+      </a>
+
+      <th:block th:each="num:${#numbers.sequence(pageResponseDTO.start, pageResponseDTO.end)}">
+        <a th:href="@{/cs/qna/list(cate=free, pg=${num})}" th:classappend="${pageResponseDTO.pg eq num ? 'num on' : 'num'}">[[${num}]]</a>
+      </th:block>
+
+      <a th:href="@{/cs/qna/list(cate=free, pg=${pageResponseDTO.end+1})}"
+         class="next" th:if="${pageResponseDTO.next}">
+        다음
+      </a>
     </div>
 
-    <a href="./write.html" class="btnWrite">문의하기</a>
+    <a th:href="@{/cs/qna/write(cate1=${cate1Info.cate1})}" class="btnWrite">문의하기</a>
 
   </article>
 </html>
