--- a/src/main/resources/templates/admin/product/list.html
+++ b/src/main/resources/templates/admin/product/list.html
@@ -16,7 +16,7 @@
     <div id="admin-wrapper">
         <header>
             <div>
-                <a th:href="@{/admin/index}" class="logo"><img src="/images/admin_logo.png" alt="admin_logo"/></a>
+                <a th:href="@{/admin/index}" class="logo"><img th:src="@{/images/admin_logo.png}" alt="admin_logo"/></a>
                 <p>
                     <span>홍길동님 반갑습니다.</span>
                     <a th:href="@{/}">HOME |</a>
@@ -111,55 +111,22 @@
                             <th>관리</th>
                         </tr>
 
-                        <tr>
+                        <tr th:each="product:${product}">
                             <td><input type="checkbox" name="상품코드"/></td>
-                            <td><img src="../images/sample_thumb.jpg" class="thumb"></td>
-                            <td>201603292</td>
-                            <td>FreeMovement BLUEFORCE</td>
-                            <td>36,000</td>
-                            <td>10</td>
-                            <td>360</td>
-                            <td>400</td>
-                            <td>홍길동</td>
-                            <td>126</td>
+                            <td><img th:src="@{/images/sample_thumb.jpg}" class="thumb"></td>
+                            <td>[[${product.prodNo}]]</td>
+                            <td>[[${product.prodName}]]</td>
+                            <td>[[${product.price}]]</td>
+                            <td>[[${product.discount}]]</td>
+                            <td>[[${product.point}]]</td>
+                            <td>[[${product.stock}]]</td>
+                            <td>[[${product.seller}]]</td>
+                            <td>[[${product.hit}]]</td>
                             <td>
-                                <a href="#">[삭제]</a>
-                                <a href="#">[수정]</a>
+                                <a th:href="@{/prodcut/delete(prodNo=${product.prodNo})}">[삭제]</a>
+                                <a th:href="@{/prodcut/modify(prodNo=${product.prodNo})}">[수정]</a>
                             </td>
                         </tr>
-                        <tr>
-                            <td><input type="checkbox" name="상품코드"/></td>
-                            <td><img src="../images/sample_thumb.jpg" class="thumb"></td>
-                            <td>201603292</td>
-                            <td>FreeMovement BLUEFORCE</td>
-                            <td>36,000</td>
-                            <td>10</td>
-                            <td>360</td>
-                            <td>400</td>
-                            <td>홍길동</td>
-                            <td>126</td>
-                            <td>
-                                <a href="#">[삭제]</a>
-                                <a th:href="@{/admin/product/register}">[수정]</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td><input type="checkbox" name="상품코드"/></td>
-                            <td><img src="../images/sample_thumb.jpg" class="thumb"></td>
-                            <td>201603292</td>
-                            <td>FreeMovement BLUEFORCE</td>
-                            <td>36,000</td>
-                            <td>10</td>
-                            <td>360</td>
-                            <td>400</td>
-                            <td>홍길동</td>
-                            <td>126</td>
-                            <td>
-                                <a href="#">[삭제]</a>
-                                <a href="#">[수정]</a>
-                            </td>
-                        </tr>
-                        
                     </table>
 
                     
