--- a/src/main/resources/templates/admin/config/info.html
+++ b/src/main/resources/templates/admin/config/info.html
@@ -16,7 +16,7 @@
     <div id="admin-wrapper">
         <header>
             <div>
-                <a th:href="@{/index}" class="logo"><img src="../images/admin_logo.png" alt="admin_logo"/></a>
+                <a th:href="@{/admin/index}" class="logo"><img th:src="@{/images/admin_logo.png}" alt="admin_logo"/></a>
                 <p>
                     <span>홍길동님 반갑습니다.</span>
                     <a th:href="@{/}">HOME |</a>
