--- a/src/main/resources/templates/admin/product/register.html
+++ b/src/main/resources/templates/admin/product/register.html
@@ -16,12 +16,12 @@
     <div id="admin-wrapper">
         <header>
             <div>
-                <a th:href="@{/index}" class="logo"><img src="/images/admin_logo.png" alt="admin_logo"/></a>
+                <a th:href="@{/admin/index}" class="logo"><img th:src="@{/images/admin_logo.png}" alt="admin_logo"/></a>
                 <p>
                     <span>홍길동님 반갑습니다.</span>
                     <a th:href="@{/}">HOME |</a>
                     <a th:href="@{/member/logout}">로그아웃 |</a>
-                    <a th:href="#@{/cs}">고객센터</a>
+                    <a th:href="@{/cs}">고객센터</a>
                 </p>
             </div>
         </header>
